# webnovel-manager

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  package-lock.json  package.json  pyproject.toml  server.js
.opencode/: .webnovel-current-project
.opencode/agents/: consistency-checker.md  context-agent.md  continuity-checker.md  high-point-checker.md  ooc-checker.md  pacing-checker.md  reader-pull-checker.md
.opencode/checkers/: schema.yaml
.opencode/references/: claude-code-call-matrix.md  context-contract-v2.md  entity-management-spec.md  genre-profiles.md  reading-power-taxonomy.md
.opencode/scripts/: __init__.py  chapter_outline_loader.py  chapter_paths.py  extract_chapter_context.py  init_project.py  project_locator.py  security_utils.py
.sisyphus/: boulder.json
.sisyphus/drafts/: api-refactor.md
.sisyphus/plans/: api-service.md  python-migration.md  webnovel-materials-mvp.md
app/core/: agent_database.py  database.py
app/repositories/: AGENTS.md  agent_repository.py  ai_provider_repository.py  material_repository.py  novel_repository.py  tag_repository.py  workflow_repository.py
app/schemas/: AGENTS.md  __init__.py  agent_workflow.py  ai_provider.py  category.py  material.py  material_extraction.py  novel.py  novel_analysis.py  search.py  stats.py  tag.py
app/services/: AGENTS.md  agent_runner.py  agent_service.py  ai_provider_service.py  epub_parser.py  (+8 more)
config/: db.js
designs/: webnovel-manager.pen  网文系统.xmind
docs/: 小说素材处理功能设计.md  接口文档.md
frontend/: package-lock.json  package.json  tailwind.config.ts
todo/: 网文处理后续开发待办.md
(+58 files in other folders)
