[project]
name = "webnovel-manager"
version = "1.0.0"
description = "网文素材管理系统 API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "langgraph>=0.2.60",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "litellm>=1.83.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.uv]
